--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Poppins',sans-serif;
 }
-.hero_section{
+.hero__section{
     background: url(./images/heroSectionBackground.png);
     color: white;
     background-size: cover;
@@ -22,11 +22,11 @@
     color: white;
     text-decoration: none;
 }
-.nav_menu_container{
+.nav__menu_container{
     display: flex;
     gap: 18px;
 }
-.nav_menu_container .user_icon{
+.nav__menu_container .user_icon{
     height: 25px;
     width: 25px;
     display: flex;
@@ -37,14 +37,89 @@
     display: none;
 }
 
+
+.hero__section_container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    height: calc(60vh - 65px);
+}
+
+.hero__section_logo{
+    width: 200px;
+    height: 40px;
+    /* height: auto; */
+}
+
+.hero__section_title{
+    text-align: center;
+    font-size: 30px;
+    font-weight: 380;
+}
+
+.hero__section_input_container{
+    background-color: white;
+    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 50%;
+    display: flex;
+    border-radius: 10px;
+}
+
+.input_container_location, 
+.input_container_search{
+    border: none;
+    padding: 5px;
+    outline: none;
+}
+
+.input_container_location{
+    width: 35%;
+    border-right: 2px solid #e0e0e0;
+}
+.input_container_search{
+    width: 65%;
+}
+
+
+
+
+
 @media only screen and (max-width: 600px){
-    .nav_menu_container .user_icon{
+    .nav__menu_container .user_icon{
         display: flex;
     }
     .link{
         display: none;
     }
-    .hero_section{
+    .hero__section{
         height: 80vh;
     }
+    
+    .hero__section_container{
+        flex-direction: column;
+        background-color: transparent;
+        width: 100%;
+    }
+    .input_container_location,
+    .input_container_search{
+        padding: 18px;
+        border-radius: 10px;
+        width: 98%;
+    }
+    .hero__section_container{
+        min-height: calc(80vh - 40px);
+    }
+    .hero__section_title{
+        font-size: 18px;
+        width: 95%;
+    }
+    
+
+
+
 }
