Completed hero section we_offer_card

--- a/styles.css
+++ b/styles.css
@@ -85,6 +85,50 @@
     width: 65%;
 }
 
+.container{
+    margin: 3rem auto;
+    width: 90%;
+}
+
+.we__offer{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.we__offer_card{
+    border-radius: 10px;
+    overflow: hidden;
+    border: 1px solid #e0e0e0;
+    transition: all 1s ease;
+    margin-right: 12px;
+}
+.we__offer_card:hover{
+    transform: scale(1.1);
+}
+.we__offer_card img{
+    width: 100%;
+    height: 170px;
+    object-fit: cover;
+    object-position: center;
+}
+
+.we__offer_content{
+    padding: 10px;
+}
+
+.we__offer_content h2{
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.we__offer_content p{
+    font-size: 12.5px;
+}
+
+
 
 
 
@@ -118,7 +162,7 @@
         font-size: 18px;
         width: 95%;
     }
-    
+
 
 
 
