--- a/styles.css
+++ b/styles.css
@@ -162,8 +162,58 @@
         font-size: 18px;
         width: 95%;
     }
+}
 
 
+.collections h1{
+    font-weight: 600;
+}
 
+.collections .sub__heading_container{
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
 
+.sub__heading_container span:nth-child(){
+    color: #ff7e8b;
+    font-size: 13px;
+    cursor: pointer;
+}
+
+.collections_card_container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin-top: 1.25rem;
+}
+
+.collections_card_container .card{
+    height: 300px;
+    min-width: 240px;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+    position: relative;
+}
+
+.card1{
+    background-image: url('./images/collection1.jpg');
+}
+
+.card2{
+    background-image: url('./images/collection2.jpg');
+}
+
+.card3{
+    background-image: url('./images/collection3.jpg');
+}
+
+.card4{
+    background-image: url('./images/collection4.jpg');
 }
