--- a/styles.css
+++ b/styles.css
@@ -178,7 +178,7 @@
     gap: 1rem;
 }
 
-.sub__heading_container span:nth-child(){
+.sub__heading_container span:nth-child(2){
     color: #ff7e8b;
     font-size: 13px;
     cursor: pointer;
@@ -217,3 +217,144 @@
 .card4{
     background-image: url('./images/collection4.jpg');
 }
+
+.overlay{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border-radius: 10px;
+    background: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.9) 0%,
+        rgba(0,0,0,0.05) 50%,
+        rgba(0,0,0,0.05) 85%,
+    );
+}
+
+.collections_card_container .card .content{
+    color: white;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    padding: 12px 16px;
+    font-size: 0.9rem;
+}
+
+.content h4{
+    font-weight: 400;
+    letter-spacing: 0.5px;
+}
+
+.get__the_app{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: rgb(255, 251, 247);
+    padding: 3rem 6rem;
+}
+
+.get__the_app .semiContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60%;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.get__the_app .semiContainer .left{
+    flex: 2;
+}
+
+.get__the_app .semiContainer .left img{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.get__the_app .semiContainer .right{
+    flex: 3;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 1rem;
+}
+
+.right h1{
+    font-weight: 400;
+    font-size: 2rem;
+}
+
+.right p{
+    font-size: 0.8rem;
+}
+
+.right .radio__botton_container{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.right .radio__botton_container div{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+
+.right .radio__botton_container div input{
+    height: 15px;
+    width: 15px;
+    accent-color: rgb(239, 79, 95);
+}
+
+.right .input_container{
+    display: flex;
+    gap: 0.5rem;
+}
+.input_container{
+    flex-wrap: wrap;
+}
+.input_container button,
+.input_container input{
+    padding: 10px 12px;
+}
+.input_container input{
+    flex: auto;
+    border: 1.5px solid gray;
+    outline: none;
+    border-radius: 5px;
+}
+
+.input_container button{
+    border: none;
+    background-color: rgb(239, 79, 95);
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.right .downlod__app_container{
+    display: flex;
+    flex-direction: column;
+    gap: 0.7rem;
+}
+
+.right .downlod__app_container h5{
+    font-weight: 400;
+    color: gray;
+}
+
+.right .downlod__app_container div{
+    display: flex;
+    gap: 1rem;
+}
+
+.right .downlod__app_container div img{
+    width: 35%;
+}
+
+/* @media query for download app */
