--- a/styles.css
+++ b/styles.css
@@ -377,3 +377,22 @@
         flex-direction: column;
     }
 }
+
+
+.explore__options{
+    font-weight: 900;
+}
+.explore__options h2{
+    padding-bottom: 10px;
+}
+.explore__options_select{
+    
+}
+.explore__options .explore{
+    width: 100%;
+    height: 60px;
+    font-size: 20px;
+    border-radius: 10px;
+    border: 0.5px solid gray;
+    box-sizing: border-box;
+}
