--- a/styles.css
+++ b/styles.css
@@ -381,12 +381,10 @@
 
 .explore__options{
     font-weight: 900;
+    
 }
 .explore__options h2{
     padding-bottom: 10px;
-}
-.explore__options_select{
-    
 }
 .explore__options .explore{
     width: 100%;
@@ -396,3 +394,81 @@
     border: 0.5px solid gray;
     box-sizing: border-box;
 }
+/* .explore__options_select select{
+    gap: 20px;
+} */
+
+
+.footer{
+    width: 100%;
+}
+
+.footer_section1{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    width: 80%;
+    margin: auto;
+}
+
+.footer_section1 img{
+    width: 130px;
+}
+
+.section1__buttonContainer{
+    display: flex;
+    gap: 1rem;
+}
+
+.section1__buttonContainer button{
+    padding: 5px;
+    width: 90px;
+    border: 1px solid gray;
+    border-radius: 5px;
+    background: transparent;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+}
+
+.navigation_container{
+    display: grid;
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr; */
+    grid-template-columns: repeat(5,1fr);
+    width: 80%;
+    margin: auto;
+    gap: 1rem;
+    padding: 3rem 0;
+    
+}
+.link__container{
+   font-weight: 500;
+   font-size: 15px;
+   margin-bottom: 5px;
+   letter-spacing: 0.8px; 
+}
+.link__container{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.footer__link{
+    text-decoration: none;
+    color: gray;
+    font-size: 12.5px;
+    font-weight: 300;
+}
+
+.footer__link:hover{
+    color: black;
+}
+
+.section__links_container{
+    display: flex;
+    gap: 0.8rem;
+}
+
